--- a/index.html
+++ b/index.html
@@ -468,11 +468,12 @@
                             <img src="images/DP_Janine.jpg" alt="">
                             <div class="user-name">
                                 <h4>Janine Cabrera</h4>
-                                <span>GABC</span>
+                                <span>GABC | Katabi sa table</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Hi, Therese! Happy Birthday! 🥳Grateful to have you as a teammate and friend. Wishing you’ll have all the good things in life because dasurv! Love you, sis ❤️</p>
+                            <p>Hi, Therese! Happy Birthday! 🥳Grateful to have you as a teammate and friend. Wishing you’ll have all the good things in life because dasurv! Love you, sis ❤️</p><br>
+                            <p>Happy Birthday, Therese! Dasurv mo ng maraming blessings and 'pag marami na, penge naman hahaha. Luv you, sisturr!! <3</p>
                         </div>
                     </div>
                     <!-- BLISS -->
@@ -488,32 +489,32 @@
                             <p>happy happy birthday Therese!! 🥳🍰 today is for celebrating the one and only you, and I am happy na nakilala kita. thank you for being the way you are. as challenging as work can get, it's a comfort to know that you're someone I can rely on whether it's just getting something done or chikahan tuwing (semi) late na tayo maglu-lunch HAHA 😂 will be here to support and help you in the ways you need, super excited na ako sa baking ventures mo 😋 God bless!!</p>
                         </div>
                     </div>
+                    <!-- Mich -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Mich.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
+                                <h4>Michelle Ladrera</h4>
+                                <span>GABC | Kapatid sa labas</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus.</p>
+                            <p>Happy happy birthday Therese 💖🥳I’m so blessed to have you as a friend and teammate kahit lagi tayong napapa barangay 🤣 May God bless you pa ng bonggang bongga kase dasurv mo with all of your hard work. I love youuuu starlet ✨</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
+                    <!-- RICAR -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Ricar.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
+                                <h4>Ma. Ricarmily Beltran</h4>
+                                <span>GABC</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus</p>
+                            <p>HAPPY BIRTHDAY THERE!!! libre soon!! 😆</p>
                         </div>
                     </div>
                     <div class="col reveal">
