--- a/index.html
+++ b/index.html
@@ -602,8 +602,9 @@
             <h1>Gallery</h1>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
 
-            <!-- FIRST DATE ALBUM -->
             <div class="album-container">
+
+                <!-- FIRST DATE ALBUM -->
                 <div id="firstDate" class="album reveal">
                     <div class="thumbnail">
                         <a data-fancybox="firstDate" href="images/FD1.jpeg">
@@ -681,6 +682,27 @@
                     </div>
                 </div>
 
+                <!-- COUSINS -->
+                <div id="cousins" class="album reveal">
+                    <div class="thumbnail">
+                        <a data-fancybox="cousins" href="images/Cousins1.jpg">
+                            <img src="images/Cousins1.jpg" width="100%" height="auto" alt="" />
+                            <div class="image-layer">
+                                <h3>Cousins 👭👭</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <p>Cousins 👭👭</p>
+                    <div style="display:none">
+                        <a data-fancybox="cousins" href="images/Cousins2.jpg">
+                            <img src="images/Cousins2.jpg" alt="" />
+                        </a>
+                        <a data-fancybox="cousins" href="images/Cousins3.jpg">
+                            <img src="images/Cousins3.jpg" alt="" />
+                        </a>
+                    </div>
+                </div>
+
                 <!-- TG - VERY COLLEGE? -->
                 <div id="verycollege" class="album reveal">
                     <div class="thumbnail">
@@ -725,12 +747,9 @@
                         </a>
                     </div>
                     <p>By Ced Cute 🙏</p>
-                    <!-- <div style="display:none">
-                        <a data-fancybox="cedxbanner" data-caption="When kaya ulit???" href="images/College3.jpg">
-                            <img src="images/College3.jpg" alt="" />
-                        </a>
-                    </div> -->
                 </div>
+
+                <!-- DABARKADS -->
                 <div id="dabarkads" class="album reveal">
                     <div class="thumbnail">
                         <a data-fancybox="dabarkads" href="images/dabarkads1.jpg">
@@ -771,6 +790,7 @@
                         </a>
                     </div>
                 </div>
+
                 <!-- FROM NEGGYTOT -->
                 <div id="neggy" class="album reveal">
                     <div class="thumbnail">
@@ -781,12 +801,7 @@
                             </div>
                         </a>
                     </div>
-                    <p>Fr: Neggy</p>
-                    <!-- <div style="display:none">
-                        <a data-fancybox="neggy" data-caption="When kaya ulit???" href="images/College3.jpg">
-                            <img src="images/College3.jpg" alt="" />
-                        </a>
-                    </div> -->
+                    <p>Neggy</p>
                 </div>
             </div>
         </div>
@@ -811,6 +826,7 @@
         Fancybox.bind('[data-fancybox="neggy"]', {});
         Fancybox.bind('[data-fancybox="dabarkads"]', {});
         Fancybox.bind('[data-fancybox="sister"]', {});
+        Fancybox.bind('[data-fancybox="cousins"]', {});
     </script>
 </body>
 
