--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     </div>
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Violy.jpg" alt="">
                             <div class="user-name">
                                 <h4>Violy</h4>
                                 <span>Family</span>
