--- a/index.html
+++ b/index.html
@@ -290,17 +290,17 @@
                     </div>
                 </div>
                 <div class="row">
-                    <!-- MAYE -->
+                    <!-- MAE -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_Maye.jpg" alt="">
+                            <img src="images/DP_Mae.jpg" alt="">
                             <div class="user-name">
-                                <h4>Maye Alojado</h4>
-                                <span>Sister/GABC</span>
+                                <h4>Mae</h4>
+                                <span>Aports</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>SHOT PUNO</p>
+                            <p>Happy Birthday Eret!!! Super grateful for our low maintenance friendship!! I miss you so much. see you real soon oki?? Sana maraming Gambas ang ulam mo on your bday. MWA ILY</p>
                         </div>
                     </div>
                     <!-- BRAHN PEREZ -->
@@ -516,17 +516,17 @@
                             <p>HAPPY BIRTHDAY THERE!!! libre soon!! 😆</p>
                         </div>
                     </div>
+                    <!-- MAYE -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Maye.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
+                                <h4>Maye Alojado</h4>
+                                <span>Sister/GABC</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus</p>
+                            <p>SHOT PUNO</p>
                         </div>
                     </div>
                     <div class="col reveal">
