--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             </div>
                         </div>
                         <div class="message">
-                            <p>Happy Birthday love! https://docs.google.com/document/d/1Q0_6c9PJh-9kWD5gCwelNtfR7P5b7oJklSGXwyPEIWA/edit?usp=sharing</p>
+                            <a href="https://docs.google.com/document/d/1Q0_6c9PJh-9kWD5gCwelNtfR7P5b7oJklSGXwyPEIWA/edit?usp=sharing"><p>Happy Birthday love! https://docs.google.com/document/d/1Q0_6c9PJh-9kWD5gCwelNtfR7P5b7oJklSGXwyPEIWA/edit?usp=sharing</p></a>
                         </div>
                     </div>
                     <!-- Tito Jimmy  -->
