--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             </div>
                         </div>
                         <div class="message">
-                            <p>Happy Birthday!</p>
+                            <p></p>
                         </div>
                     </div>
                     <!-- MAMI -->
@@ -531,7 +531,7 @@
                             <p>SHOT PUNO</p>
                         </div>
                     </div>
-                    <div class="col reveal">
+                    <div class="col reveal" style="opacity: 0;">
                         <div class="user-icon">
                             <img src="images/DP_None.png" alt="">
                             <div class="user-name">
@@ -545,7 +545,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col reveal">
                         <div class="user-icon">
                             <img src="images/DP_None.png" alt="">
@@ -585,7 +585,7 @@
                                 lobortis maximus.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <!-- VIEW MORE BUTTON -->
             <button id="viewMoreBtn" class="btn btn__inverse" onclick="viewMore('b2')"
