--- a/index.html
+++ b/index.html
@@ -531,17 +531,17 @@
                             <p>SHOT PUNO</p>
                         </div>
                     </div>
-                    <div class="col reveal" style="opacity: 0;">
+                    <!-- GIU -->
+                    <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Giu.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
+                                <h4>Giulianne Sison</h4>
+                                <span>GABC</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus.</p>
+                            <p>Happiest birthday, Therese! Hope you get to enjoy your special day, and don't forget to relax once in a while! - Best, Giu 🥳💐🥂</p>
                         </div>
                     </div>
                 </div>
