--- a/index.html
+++ b/index.html
@@ -210,17 +210,17 @@
             <!-- SECOND BATCH -->
             <div id="b2" class="hidden-batch" style="max-height:0px;opacity:0;">
                 <div class="row">
-                    <!-- CECE  -->
+                    <!-- Tine  -->
                     <div class="col reveal">
                         <div class="user-icon">
                             <img src="images/DP_Cece.jpg" alt="">
                             <div class="user-name">
-                                <h4>Cerilo Pagulayan</h4>
-                                <span>GABC</span>
+                                <h4>Christine Bernal</h4>
+                                <span>Family</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Hello Tere! Thank you so much for the gift of friendship, kindness, and a beautiful heart. On your special day, I just want you to know that I am so happy to have such an amazing and special person in my life. I want only good things for you on your special day. Have a blissful birthday celebration! Samgyup soon please… Luv yeah 🫶🏼✨💖</p>
+                            <p>Hi tere, Wishing you blessings as you take another step in your journey of life.</p>
                         </div>
                     </div>
                     <!-- CHABEL -->
@@ -545,18 +545,18 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="row">
+                <div class="row">
+                    <!-- CECE  -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Cece.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
+                                <h4>Cerilo Pagulayan</h4>
+                                <span>GABC</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus</p>
+                            <p>Hello Tere! Thank you so much for the gift of friendship, kindness, and a beautiful heart. On your special day, I just want you to know that I am so happy to have such an amazing and special person in my life. I want only good things for you on your special day. Have a blissful birthday celebration! Samgyup soon please… Luv yeah 🫶🏼✨💖</p>
                         </div>
                     </div>
                     <div class="col reveal">
@@ -585,7 +585,7 @@
                                 lobortis maximus.</p>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
             <!-- VIEW MORE BUTTON -->
             <button id="viewMoreBtn" class="btn btn__inverse" onclick="viewMore('b2')"
