--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <!-- Tine  -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_Cece.jpg" alt="">
+                            <img src="images/DP_.jpg" alt="">
                             <div class="user-name">
                                 <h4>Christine Bernal</h4>
                                 <span>Family</span>
@@ -559,7 +559,7 @@
                             <p>Hello Tere! Thank you so much for the gift of friendship, kindness, and a beautiful heart. On your special day, I just want you to know that I am so happy to have such an amazing and special person in my life. I want only good things for you on your special day. Have a blissful birthday celebration! Samgyup soon please… Luv yeah 🫶🏼✨💖</p>
                         </div>
                     </div>
-                    <div class="col reveal">
+                    <div class="col reveal" style="opacity:0;">
                         <div class="user-icon">
                             <img src="images/DP_None.png" alt="">
                             <div class="user-name">
@@ -572,7 +572,7 @@
                                 lobortis maximus</p>
                         </div>
                     </div>
-                    <div class="col reveal">
+                    <div class="col reveal" style="opacity:0;">
                         <div class="user-icon">
                             <img src="images/DP_None.png" alt="">
                             <div class="user-name">
