--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <!-- Tine  -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_.jpg" alt="">
+                            <img src="images/DP_Tine.jpg" alt="">
                             <div class="user-name">
                                 <h4>Christine Bernal</h4>
                                 <span>Family</span>
